--- a/People/People/AppShell.xaml
+++ b/People/People/AppShell.xaml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <Shell
-    x:Class="People.AppShell"
+    x:Class="Peoplee.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:People"
+    xmlns:local="clr-namespace:Peoplee"
     Shell.FlyoutBehavior="Disabled">
 
-    <ShellContent
+	<ShellContent
         Title="People"
         ContentTemplate="{DataTemplate local:MainPage}"
         Route="MainPage" />
